@@ -1,5 +1,6 @@
 package org.zalando.nakadi.service;
 
+import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Multimap;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -54,7 +55,6 @@ import org.zalando.nakadi.plugin.api.authz.AuthorizationService;
 import org.zalando.nakadi.repository.TopicRepository;
 import org.zalando.nakadi.repository.db.EventTypeRepository;
 import org.zalando.nakadi.repository.db.SubscriptionDbRepository;
-import org.zalando.nakadi.repository.db.SubscriptionTokenLister;
 import org.zalando.nakadi.repository.kafka.PartitionsCalculator;
 import org.zalando.nakadi.service.publishing.NakadiAuditLogPublisher;
 import org.zalando.nakadi.service.publishing.NakadiKpiPublisher;
@@ -104,7 +104,6 @@ public class EventTypeService {
 
     private final EventTypeCache eventTypeCache;
     private final SchemaService schemaService;
-    private final SubscriptionTokenLister subscriptionTokenLister;
 
     @Autowired
     public EventTypeService(
@@ -126,7 +125,6 @@ public class EventTypeService {
             final EventTypeCache eventTypeCache,
             final SchemaService schemaService,
             final AdminService adminService,
-            final SubscriptionTokenLister subscriptionTokenLister,
             final ApplicationService applicationService) {
         this.eventTypeRepository = eventTypeRepository;
         this.timelineService = timelineService;
@@ -146,7 +144,6 @@ public class EventTypeService {
         this.adminService = adminService;
         this.eventTypeCache = eventTypeCache;
         this.schemaService = schemaService;
-        this.subscriptionTokenLister = subscriptionTokenLister;
         this.applicationService = applicationService;
     }
 
@@ -190,6 +187,8 @@ public class EventTypeService {
         }
 
         validateOwningApplication(null, eventType.getOwningApplication());
+
+        validateEventOwnerSelector(eventType);
 
         if (eventType.getAnnotations() == null) {
             eventType.setAnnotations(new HashMap<>());
@@ -392,12 +391,10 @@ public class EventTypeService {
     private Multimap<TopicRepository, String> deleteEventTypeWithSubscriptions(final String eventType) {
         try {
             return transactionTemplate.execute(action -> {
-                eventTypeRepository.listEventTypesWithRowLock(Set.of(eventType),
-                        EventTypeRepository.RowLockMode.UPDATE);
+                final Set<String> eventTypes = ImmutableSet.of(eventType);
+                eventTypeRepository.listEventTypesWithRowLock(eventTypes, EventTypeRepository.RowLockMode.UPDATE);
 
-                final List<Subscription> subscriptions =
-                        subscriptionRepository.listSubscriptions(Set.of(eventType), Optional.empty(),
-                                Optional.empty(), Optional.empty());
+                final List<Subscription> subscriptions = subscriptionRepository.listAllSubscriptionsFor(eventTypes);
 
                 if (!(featureToggleService.isFeatureEnabled(DELETE_EVENT_TYPE_WITH_SUBSCRIPTIONS)
                         || onlyDeletableSubscriptions(subscriptions))) {
@@ -460,6 +457,8 @@ public class EventTypeService {
                 authorizationValidator.authorizeEventTypeAdmin(original);
                 validateEventOwnerSelectorUnchanged(original, eventTypeBase);
             }
+            validateEventOwnerSelector(eventTypeBase);
+
             authorizationValidator.validateAuthorization(original.asResource(), eventTypeBase.asBaseResource());
             validateName(eventTypeName, eventTypeBase);
             validateCompactionUpdate(original, eventTypeBase);
@@ -623,6 +622,16 @@ public class EventTypeService {
             InvalidEventTypeException {
         if (original.getAudience() != null && eventTypeBase.getAudience() == null) {
             throw new InvalidEventTypeException("event audience must not be set back to null");
+        }
+    }
+
+    static void validateEventOwnerSelector(final EventTypeBase eventType) {
+        final EventOwnerSelector selector = eventType.getEventOwnerSelector();
+        if (selector != null) {
+            if (selector.getType() == EventOwnerSelector.Type.METADATA && selector.getValue() != null) {
+                throw new InvalidEventTypeException(
+                        "event_owner_selector specifying value for type 'metadata' is not supported");
+            }
         }
     }
 
